force-app/main/default/objects/Animal_Identifier__c/Animal_Identifier__c.object-meta.xml
<CustomObject>
    <description
  >Tracks external and operational identifiers assigned to an animal.</description>
    <label>Animal Identifier</label>
    <nameField>
        <label>Identifier Number</label>
        <displayFormat>ID-{00000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Animal Identifiers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>