force-app/main/default/objects/Animal_Identifier__c/fields/Animal__c.field-meta.xml
<CustomField>
    <fullName>Animal__c</fullName>
    <description>Animal that owns this identifier.</description>
    <label>Animal</label>
    <referenceTo>Animal__c</referenceTo>
    <relationshipLabel>Identifiers</relationshipLabel>
    <relationshipName>Identifiers</relationshipName>
    <type>MasterDetail</type>
</CustomField>