force-app/main/default/objects/Animal_Identifier__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Country associated with the identifier.</description>
    <label>Country</label>
    <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>New Zealand</fullName>
            </value>
            <value>
                <fullName>United States</fullName>
            </value>
            <value>
                <fullName>United Kingdom</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            </valueSetDefinition>
        </valueSet>
</CustomField>