force-app/main/default/objects/Animal_Identifier__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Date the identifier stopped being effective.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>