force-app/main/default/objects/Animal_Identifier__c/fields/Identifier_Type__c.field-meta.xml
<CustomField>
    <fullName>Identifier_Type__c</fullName>
    <description>Operational or external identifier type.</description>
    <label>Identifier Type</label>
    <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
            <value>
                <fullName>Shelter ID</fullName>
            </value>
            <value>
                <fullName>Microchip</fullName>
            </value>
            <value>
                <fullName>Council ID</fullName>
            </value>
            <value>
                <fullName>Veterinary ID</fullName>
            </value>
            <value>
                <fullName>Foster ID</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            </valueSetDefinition>
        </valueSet>
</CustomField>