force-app/main/default/objects/Animal_Identifier__c/fields/Identifier_Value__c.field-meta.xml
<CustomField>
    <fullName>Identifier_Value__c</fullName>
    <description
  >Unique identifier value used for matching and integrations.</description>
    <externalId>true</externalId>
    <label>Identifier Value</label>
    <length>80</length>
    <required>true</required>
    <unique>true</unique>
    <type>Text</type>
</CustomField>