force-app/main/default/objects/Animal_Identifier__c/fields/Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary__c</fullName>
    <description
  >Marks the identifier as the primary identifier for the animal.</description>
    <label>Is Primary</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>