force-app/main/default/objects/Animal_Identifier__c/fields/Issuing_Body__c.field-meta.xml
<CustomField>
    <fullName>Issuing_Body__c</fullName>
    <description>Organisation that issued the identifier.</description>
    <label>Issuing Body</label>
    <length>120</length>
    <type>Text</type>
</CustomField>