force-app/main/default/objects/Animal_Identifier__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Date the identifier became effective.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>