force-app/main/default/objects/Animal_Identifier__c/validationRules/A360_Identifier_End_After_Start.validationRule-meta.xml
<ValidationRule>
    <active>true</active>
    <description
  >Ensures identifier end dates do not precede start dates.</description>
    <errorConditionFormula
  >AND(NOT(ISBLANK(End_Date__c)), NOT(ISBLANK(Start_Date__c)), End_Date__c &lt; Start_Date__c)</errorConditionFormula>
    <errorMessage>End Date must be on or after Start Date.</errorMessage>
    <fullName>A360_Identifier_End_After_Start</fullName>
</ValidationRule>